--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/configurar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseInteractiva/configurar.xhtml
@@ -32,6 +32,36 @@
                     }
                 };
             }
+            var comps = [];
+            var invertir = undefined;
+            function controlarEvnt(id, rowIndex) {
+                //proceso normal
+                if (invertir === undefined) {
+                    if (comps[rowIndex] === undefined) {
+                        comps[rowIndex] = false;
+                        PF(id).close();
+                    } else {
+                        comps[rowIndex] = undefined;
+                        PF(id).show();
+                    }
+                    invertir = undefined;
+                    //correccion de bug
+                } else {
+//                    invertir = undefined;
+                    if (comps[rowIndex] === undefined) {
+                        comps[rowIndex] = false;
+                        PF(id).show();
+                    } else {
+                        comps[rowIndex] = undefined;
+                        PF(id).close();
+                    }
+                }
+            }
+            function ocultarTodos() {
+                invertir = true;
+                comps = [];
+                jQuery('.multimedia').hide();
+            }
         </script>
     </ui:define>
     <ui:define name="breadCrumb">
@@ -51,16 +81,8 @@
                 <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
                     <p:outputLabel value="Esta ayuda sirve un monton"/>
                 </p:dialog>
-                configuracion de pantalla(alto,ancho),
-
-                secciones tab, menu derecha(componentes disp y selec)
-                agregar(ordenar) componentes a seccion(seleccion de seccion, lista componentes disponibles, seleccionados, vista previa del componente a agregar),
-
-                configurar posicion,--ya
-
-                configurar interaccion entre componentes (otra pantalla obligatoriamente por los efectos),
-                preview
                 <div class="EmptyBox5"></div>
+                #{gestionClaseInteracController.resetMostrar()}
                 <p:panelGrid columns="5">
                     <p:commandLink onclick="PF('dlgConfPantalla').show()">
                         <i class="icon-screen Fs25 Red" style="cursor: pointer" title="Modificar tamaño de pantalla de clase"></i>
@@ -74,8 +96,25 @@
                     <p:selectOneMenu value="#{gestionClaseInteracController.nuevoComponente.FCompSuperCompon}" converter="superCompon" filter="true" filterMatchMode="contains">
                         <f:selectItems value="#{gestionClaseInteracController.componentesInteractDisponibles}" var="comps" itemLabel="#{comps.idTipoSuperCompon.tscDescripcion} - #{comps.scNombre}" itemValue="#{comps}"></f:selectItems>
                     </p:selectOneMenu>
-                    <p:commandButton value="Agregar Componente" action="#{gestionClaseInteracController.agregarComponentePantallaActual()}" update="clase"></p:commandButton>
+                    <p:commandButton value="Agregar Componente" action="#{gestionClaseInteracController.agregarComponentePantallaActual()}" update="clase,mostrar"></p:commandButton>
                 </p:panelGrid>
+                <p:remoteCommand update="mostrar" name="updateMostrar"></p:remoteCommand>
+                <p:dataTable value="#{gestionClaseInteracController.componentesPantallaActual}" var="compActual" id="mostrar"
+                             paginatorPosition="bottom" rows="5"
+                             paginator="true"
+                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                             rowsPerPageTemplate="5,10,20,40"
+                             reflow="true"
+                             rowIndexVar="rowIndex"
+                             >
+                    <p:column headerText="Componente">
+                        #{compActual.claseSuperComp.FCompSuperCompon.scNombre}
+                    </p:column>
+                    <p:column>
+                        <p:inputSwitch class="switch" offLabel="Ocultar" onLabel="Mostrar" onchange="controlarEvnt('wb_id_#{compActual.claseSuperComp.idClaseSupComp}_#{gestionClaseInteracController.idTipoElempPlantilla}_#{gestionClaseInteracController.npantalla}',#{rowIndex})" value="#{compActual.mostrar}" ></p:inputSwitch>
+                    </p:column>
+                </p:dataTable>
+                <p:commandButton value="Ocultar Todos Los Componentes"  action="#{gestionClaseInteracController.ocultarTodos()}" update="mostrar" oncomplete="ocultarTodos()"></p:commandButton> 
                 <p:dialog widgetVar="dlgConfPantalla" header="Configurar Pantalla de Clase" modal="true">
                     <p:outputLabel value="Alto" class="TexAlCenter" ></p:outputLabel>
                     <p:spinner value="#{gestionClaseInteracController.claseConfig.clAlto}" max="1080" stepFactor="100"></p:spinner>
@@ -88,13 +127,13 @@
                 <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
                     <p:outputLabel value="¿Está seguro de eliminar la pantalla actual y todos sus componentes?" class="TexAlCenter" ></p:outputLabel>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Si" action="#{gestionClaseInteracController.eliminarPantallaActual()}" update="clase" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
+                    <p:commandButton value="Si" action="#{gestionClaseInteracController.eliminarPantallaActual()}" update="clase,mostrar" oncomplete="PF('dlgEliminar').hide()"></p:commandButton>
                     <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" immediate="true" ></p:commandButton>
                 </p:dialog>
                 <p:dialog widgetVar="dlgEliminarComponente" header="Eliminar" modal="true">
                     <p:outputLabel value="¿Está seguro de eliminar el componente actual?" class="TexAlCenter" ></p:outputLabel>
                     <div class="EmptyBox20"></div>
-                    <p:commandButton value="Si" action="#{gestionClaseInteracController.eliminarComponenteActual()}" update="clase" oncomplete="PF('dlgEliminarComponente').hide()"></p:commandButton>
+                    <p:commandButton value="Si" action="#{gestionClaseInteracController.eliminarComponenteActual()}" update="clase,mostrar" oncomplete="PF('dlgEliminarComponente').hide()"></p:commandButton>
                     <p:commandButton value="No" onclick="PF('dlgEliminarComponente').hide();" immediate="true" ></p:commandButton>
                 </p:dialog>
                 <div class="EmptyBox5"></div>
@@ -112,7 +151,7 @@
                                                 <p:droppable for="pantalla_id_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{pantalla.numPantalla}" >
                                                     <p:ajax listener="#{gestionClaseInteracController.onDrop}"></p:ajax>
                                                 </p:droppable>
-                                                <p:panel class="multimedia" id="elem_id_#{superComponente.claseSuperComp.idClaseSupComp}_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{pantalla.numPantalla}" style="left: #{superComponente.claseSuperComp.scPosX}px;top: #{superComponente.claseSuperComp.scPosY}px;height: #{superComponente.superComp.scAlto+10}px;width: #{superComponente.superComp.scAncho+10}px;position: absolute;">
+                                                <p:panel class="multimedia" id="elem_id_#{superComponente.claseSuperComp.idClaseSupComp}_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{pantalla.numPantalla}" style="left: #{superComponente.claseSuperComp.scPosX}px;top: #{superComponente.claseSuperComp.scPosY}px;height: #{superComponente.superComp.scAlto+10}px;width: #{superComponente.superComp.scAncho+10}px;position: absolute;" widgetVar="wb_id_#{superComponente.claseSuperComp.idClaseSupComp}_#{elemPlantilla.idElemPlantilla.idTipoElemPlantilla.idTipoElemPlantilla}_#{pantalla.numPantalla}">
                                                     <p:panelGrid columns="3">
                                                         <p:commandLink class="move">
                                                             <i class="icon-gamepad4 Fs15 Red" style="cursor: pointer" title="Mover componente"></i>
@@ -205,7 +244,7 @@
                 <div class="EmptyBox50"></div>
                 <div class="Container100 Responsive">
                     <p:commandButton value="Guardar Configuracion" actionListener="#{gestionClaseInteracController.guardarConfiguracion()}" ajax="true"></p:commandButton>
-                    <p:commandButton value="Refrescar" actionListener="#{gestionClaseInteracController.refreshConfig()}" ajax="true" oncomplete="refrescarClase()"></p:commandButton>
+                    <p:commandButton value="Refrescar" actionListener="#{gestionClaseInteracController.setIndexMenu(4)}" ajax="true" oncomplete="refrescarClase()"></p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax resetValues="true" listener="#{gestionClaseInteracController.setIndexMenu(0)}"/>
                     </p:commandButton>
