--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionClase/claseVideoAlmacenada/editar.xhtml
@@ -8,8 +8,8 @@
         <p:breadCrumb>
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
-            <p:menuitem value="Gestionar Clase" url="#"/>
-            <p:menuitem value="Clase Interactiva" url="#{siteUrls.claseInteractiva}"/>
+            <p:menuitem value="Gestionar Clase" url="#{siteUrls.claseVideoAlmacenada}"/>
+            <p:menuitem value="Modificar Video-Clase Almacenada" url="#"/>
             <p:separator />
         </p:breadCrumb>
     </ui:define>
@@ -23,17 +23,17 @@
                 <p:focus id="focus" context="mod_p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="mod_p1">
                     <p:outputLabel for="materia" value="Materia:"></p:outputLabel>
-                    <p:outputLabel id="materia" value="#{gestionClaseInteracController.claseModifica.idCurso.idMateria.maNombre}"></p:outputLabel>
+                    <p:outputLabel id="materia" value="#{gestionVideoClaseController.claseModifica.idCurso.idMateria.maNombre}"></p:outputLabel>
                     <p:outputLabel for="curso" value="Curso:"></p:outputLabel>
-                    <p:outputLabel id="curso" value="#{gestionClaseInteracController.claseModifica.idCurso.crNombre}"></p:outputLabel>
+                    <p:outputLabel id="curso" value="#{gestionVideoClaseController.claseModifica.idCurso.crNombre}"></p:outputLabel>
                     <p:outputLabel for="tema" value="Tema de clase:"></p:outputLabel>
-                    <p:outputLabel id="tema" value="#{gestionClaseInteracController.claseModifica.clTema}"></p:outputLabel>
+                    <p:outputLabel id="tema" value="#{gestionVideoClaseController.claseModifica.clTema}"></p:outputLabel>
                     <p:outputLabel for="plantilla" value="Plantilla: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu tabindex="2" id="plantilla" class=" Responsive" value="#{gestionClaseInteracController.claseModifica.idPlantilla}" converter="plantilla" filter="true" filterMatchMode="contains">
-                        <f:selectItems value="#{gestionClaseInteracController.plantillaModificaList}" var="plantilla" itemLabel="#{plantilla.plNombre}" itemValue="#{plantilla}"></f:selectItems>
+                    <p:selectOneMenu tabindex="2" id="plantilla" class=" Responsive" value="#{gestionVideoClaseController.claseModifica.idPlantilla}" converter="plantilla" filter="true" filterMatchMode="contains">
+                        <f:selectItems value="#{gestionVideoClaseController.plantillaModificaList}" var="plantilla" itemLabel="#{plantilla.plNombre}" itemValue="#{plantilla}"></f:selectItems>
                     </p:selectOneMenu>
                     <p:outputLabel for="estado" value="Estado: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu tabindex="2" id="estado" class=" Responsive" value="#{gestionClaseInteracController.claseModifica.clEstado}">
+                    <p:selectOneMenu tabindex="2" id="estado" class=" Responsive" value="#{gestionVideoClaseController.claseModifica.clEstado}">
                         <f:selectItem itemValue ="N" itemLabel="No Iniciada"/>
                         <f:selectItem itemValue="A" itemLabel="Iniciada"/>
                         <f:selectItem itemValue="T" itemLabel="Terminada"/>
@@ -41,12 +41,12 @@
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100 Responsive">
-                    <p:commandButton value="Guardar" action="#{gestionClaseInteracController.guardarModifica()}" update="mod_p1" oncomplete="configurarEnterTab()" />
+                    <p:commandButton value="Guardar" action="#{gestionVideoClaseController.guardarModifica()}" update="mod_p1" oncomplete="configurarEnterTab()" />
                     <p:commandButton value="Limpiar" immediate="true">
                         <p:ajax update="mod_p1,focus" resetValues="true" />
                     </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
-                        <p:ajax update="mod_p1" resetValues="true" listener="#{gestionClaseInteracController.setIndexMenu(0)}"/>
+                        <p:ajax update="mod_p1" resetValues="true" listener="#{gestionVideoClaseController.setIndexMenu(0)}"/>
                     </p:commandButton>
                     <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
                     <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
